fix margin on overlapping span

--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,10 @@
   border-radius: 25px;
   background: #0059bf;
   position: absolute;
+  margin:0 auto;
   height: 150px;
   width: 80%;
   top: 430px;
-  left: 150px;
 }
 .white-area {
   background: whitesmoke;
